# aerospike-cli

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  ProjectLibraries.cmake  README.md  versions.cmake
.github/workflows/: documentation.yaml  macos.yml  standalone.yml  style.yml
all/: CMakeLists.txt
cmake/: BuildFlags.cmake  ExternalDependencies.cmake  OpenSSL.cmake  ProjectLibraries.cmake  StaticBuild.cmake
docker/: Dockerfile
docs/: CMakeLists.txt
include/ascli/: AerospikeOperator.h  DataTypes.h  ascli.h  base64.h
include/ascli/Operators/: AerospikeDeleteOperator.h  AerospikeGetOperator.h  AerospikeOperator.h  AerospikePutOperator.h  AerospikeQueryOperator.h  AerospikeScanOperator.h
main/: CMakeLists.txt
main/src/: main.cpp
src/: AerospikeOperator.cpp  CMakeLists.txt  ascli.cpp
src/Operators/: AerospikeDeleteOperator.cpp  AerospikeGetOperator.cpp  AerospikeOperator.cpp  AerospikePutOperator.cpp  AerospikeQueryOperator.cpp  AerospikeScanOperator.cpp
test/: CMakeLists.txt
test/src/: ascli.cpp
